# health_booking_system

./: Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
accounts/: models.py
accounts/migrations/: 0001_initial.py
doctors/: models.py
health_booking_system/: asgi.py  settings.py  urls.py  wsgi.py
