[project]
name = "health-booking-system"
version = "0.1.0"
description = "A Django-based Health Appointment Booking System with role-based access for patients, doctors, and admins, supporting appointment scheduling, notifications, and PostgreSQL integration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=5.2.6",
    "django-environ>=0.12.0",
    "djangorestframework>=3.16.1",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.1",
]
